<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout_08"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/component_09"
    tools:context=".LoginActivity"
    tools:ignore="UselessParent">

    <TextView
        android:id="@+id/TextView_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/font"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <RelativeLayout
        android:id="@+id/RelativeLayout_09"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="275dp"
        android:background="@drawable/component_19"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/TextView_06"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/grey03"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_10"
        android:layout_width="420dp"
        android:layout_height="640dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/component_11"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/LinearLayout_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/TextView_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/TextView_08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/font"
                android:text="@string/enter_full_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/RelativeLayout_11"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/component_20"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/EditText_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/component_40"
                    tools:ignore="Autofill,LabelFor" />

            </RelativeLayout>

            <TextView
                android:id="@+id/TextView_09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/font"
                android:text="@string/enter_email_id"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/RelativeLayout_12"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/component_20"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/EditText_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/component_40"
                    tools:ignore="Autofill,LabelFor" />

            </RelativeLayout>

            <TextView
                android:id="@+id/TextView_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/font"
                android:text="@string/enter_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/RelativeLayout_13"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/component_20"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/EditText_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/component_40"
                    tools:ignore="Autofill,LabelFor" />

                <ImageView
                    android:id="@+id/ImageView_05"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/component_13"
                    android:visibility="visible"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/ImageView_06"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/component_14"
                    android:visibility="invisible"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/ImageView_07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/component_15"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/TextView_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_14"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="620dp"
        android:background="@drawable/component_16">

        <TextView
            android:id="@+id/TextView_12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/grey03"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/component_21"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ImageView_08"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/component_02"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_16"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/component_18"
        android:visibility="gone"
        tools:ignore="UselessParent">

        <ProgressBar
            android:id="@+id/ProgressBar_02"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/component_01"
            android:indeterminate="true"
            android:max="100"
            android:progress="0" />

        <RelativeLayout
            android:id="@+id/RelativeLayout_17"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/RelativeLayout_18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/ImageView_09"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/logo_01"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/LinearLayout_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@id/ImageView_09"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/TextView_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/processing_request"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/TextView_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:text="@string/your_request_is_currently_being_processed_please_wait"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
